[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/hdrs/satara_night_1k.exr" type="Texture" id=1]
[ext_resource path="res://scenes/level_parts/scary_level_parts/skinwalker.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/temp_assets/20221109_113547.jpg" type="Texture" id=3]
[ext_resource path="res://scenes/levels/quantum_moon.gd" type="Script" id=4]

[sub_resource type="PanoramaSky" id=75]
radiance_size = 4
panorama = ExtResource( 1 )

[sub_resource type="Environment" id=76]
background_mode = 2
background_sky = SubResource( 75 )
background_sky_orientation = Basis( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08 )
background_energy = 0.17
fog_enabled = true
fog_color = Color( 0.372549, 0.4, 0.431373, 1 )
fog_sun_color = Color( 0.207843, 0.290196, 0.301961, 1 )
glow_intensity = 5.14
adjustment_enabled = true
adjustment_brightness = 0.95
adjustment_contrast = 1.1
adjustment_saturation = 1.2

[sub_resource type="CubeMesh" id=77]
size = Vector3( 50, 1, 50 )

[sub_resource type="SpatialMaterial" id=78]
albedo_texture = ExtResource( 3 )
uv1_scale = Vector3( -5, -5, 1 )
uv1_triplanar_sharpness = 0.5

[sub_resource type="SphereMesh" id=79]
radius = 3.0
height = 6.0

[sub_resource type="CylinderMesh" id=80]
top_radius = 3.0
bottom_radius = 3.0
height = 3.838

[node name="Mez" type="Spatial" groups=["level_parent"]]

[node name="WorldEnvironment2" type="WorldEnvironment" parent="."]
environment = SubResource( 76 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.39671, 0 )
mesh = SubResource( 77 )
material/0 = SubResource( 78 )

[node name="skinwalker" parent="." instance=ExtResource( 2 )]

[node name="quantum_moon" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.415042, -8.62119, -1.13089 )
mesh = SubResource( 79 )
script = ExtResource( 4 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="quantum_moon"]
aabb = AABB( -2.96479, -3.13429, -2.99597, 5.92958, 6.26858, 5.99194 )

[node name="moon_points" type="Spatial" parent="."]

[node name="Position_1" type="Position3D" parent="moon_points" groups=["quantum_pos"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16.5155, 7.30355, -0.14762 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="moon_points/Position_1"]

[node name="Position_2" type="Position3D" parent="moon_points" groups=["quantum_pos"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.79988, 7.304, 10.5408 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="moon_points/Position_2"]

[node name="Position_3" type="Position3D" parent="moon_points" groups=["quantum_pos"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.1727, 7.304, -12.2707 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="moon_points/Position_3"]

[node name="moon_points_meshes" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="moon_points_meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.7884, 1.6832, -12.1599 )
mesh = SubResource( 80 )

[node name="MeshInstance2" type="MeshInstance" parent="moon_points_meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.24344, 1.62966, 9.93504 )
mesh = SubResource( 80 )

[node name="MeshInstance3" type="MeshInstance" parent="moon_points_meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16.2646, 1.7136, -0.305079 )
mesh = SubResource( 80 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 16.0185, 0 )
omni_range = 27.5206

[connection signal="camera_exited" from="quantum_moon/VisibilityNotifier" to="quantum_moon" method="_on_VisibilityNotifier_camera_exited"]
